Front-end: Modificaciones Generales

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -267,7 +267,7 @@ a:focus {
     color: #fff;
 }
 .modal-header {
-    background: #1abc9c;
+    background: #d64242;
     color: #fff;
     border-radius: 4px;
 }
@@ -407,6 +407,10 @@ footer a {
 #navegador {
     background: #fff;
     height:100px;
+    border-bottom: 2px solid #dedfdf;
+}
+hr {
+    border: 1px solid #dedfdf;
 }
 #navegador .navbar-brand {
     color: rgb(99, 99, 99);
@@ -592,6 +596,10 @@ table th {
 table td {
     font-size: 13px;
 }
+.tabla-cabecera, .tabla-cabecera th {
+    background: #d64242;
+    color: #fff;
+}
 #nav-admin {
     background: #444444;
 }
@@ -630,4 +638,39 @@ table td {
 .font-big {
     font-size: 60px;
     color: #3a3a3a;
+}
+.ui-datepicker .ui-datepicker-header {
+    background: #d64242;
+    color: #fff;
+}
+#custom-search-input{
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+#custom-search-input input{
+    border: 0;
+    box-shadow: none;
+}
+
+#custom-search-input button{
+    margin: 2px 0 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #666666;
+    padding: 0 8px 0 10px;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input button:hover{
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+}
+
+#custom-search-input .glyphicon-search{
+    font-size: 23px;
 }
